--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "docx": "^9.5.1",
+    "googleapis": "^153.0.0",
     "lucide-react": "^0.525.0",
     "mammoth": "^1.9.1",
     "next": "15.3.5",
