--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/cheerio": "^0.22.35",
     "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
     "docx": "^9.5.1",
     "googleapis": "^153.0.0",
     "lucide-react": "^0.525.0",
     "mammoth": "^1.9.1",
+    "multer": "^2.0.1",
     "next": "15.3.5",
     "openai": "^5.9.0",
+    "pdf-parse": "^1.1.1",
     "puppeteer": "^24.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -27,6 +31,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
