--- a/package.json
+++ b/package.json
@@ -6,20 +6,29 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && prisma db push && next build"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
+    "@prisma/client": "^6.12.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cheerio": "^0.22.35",
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.0",
     "docx": "^9.5.1",
+    "dotenv": "^17.2.0",
     "googleapis": "^153.0.0",
     "lucide-react": "^0.525.0",
     "mammoth": "^1.9.1",
     "multer": "^2.0.1",
     "next": "15.3.5",
+    "next-auth": "^4.24.11",
     "openai": "^5.9.0",
     "pdf-parse": "^1.1.1",
+    "prisma": "^6.12.0",
     "puppeteer": "^24.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
