--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:ci": "jest --ci --coverage --watchAll=false",
     "dev-setup": "node scripts/dev-setup.js",
     "deploy": "node scripts/prod-deploy.js",
-    "local": "npm run dev-setup && npm run dev"
+    "local": "npm run dev-setup && npm run dev",
+    "favicons": "node scripts/generate-favicons.js"
   },
   "dependencies": {
     "@distube/ytdl-core": "^4.16.12",
